# FindPath

./: CMakeLists.txt  README.md  main.cpp  manager.cpp
include/: bfslogic.h  configuration.h  ilogicalsearch.h  logicalsearchrunnable.h  manager.h  movescene.h
src/: bfslogic.cpp  bfslogic.h  bfsrunnable.cpp  bfsrunnable.h  configuration.h  gameview.cpp  gameview.h  graphicscell.cpp  graphicscell.h  graphicsfield.cpp  graphicsfield.h  logicalsearchrunnable.cpp  main.cpp  manager.cpp  manager.h  manager.ui  movescene.cpp  movescene.h
